suite/tests/decls/invalid/var-bad-redecl.c
int main(void)
{
    extern long a;
    extern int a;
}
